--- a/packages/syft-runtimes/notebooks/high-low/high_low.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "syhl.sync(syftbox_client=highside_client)"
+    "syhl.sync(syftbox_client=highside_client, rsync_config=sync_config)"
    ]
   },
   {
@@ -181,9 +181,7 @@
     "import os\n",
     "\n",
     "# Set the high client as default syftbox client\n",
-    "os.environ[CONFIG_PATH_ENV] = str(\n",
-    "    highside_client.workspace.data_dir.parent / \"config.json\"\n",
-    ")"
+    "os.environ[CONFIG_PATH_ENV] = str(highside_client.config_path)"
    ]
   },
   {
@@ -255,7 +253,6 @@
    "source": [
     "DATASET_NAME = \"my_cool_dataset\"\n",
     "\n",
-    "\n",
     "highside_dataset = syd.create(\n",
     "    name=DATASET_NAME,\n",
     "    mock_path=data_dir / \"mock_data.csv\",\n",
@@ -318,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_rds_client.dataset.get_all()[0].mock_dir"
+    "highside_client.workspace.data_dir"
    ]
   },
   {
@@ -328,23 +325,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highside_client.workspace.data_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "lowside_client.workspace.data_dir"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "source": [
     "# Switch to low-side"
@@ -367,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,29 +420,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "34",
-   "metadata": {},
-   "source": [
-    "## High side Job Runner\n",
-    "- Run job runner on high-side as daemon process, watching the folder `private/syft_runtimes/highside-1234/jobs` for new jobs\n",
-    "- Manually sync pending jobs and results (just in a notebook for now)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "35",
-   "metadata": {},
-   "source": [
-    "## Low side submits jobs to the correct runner on the high side. Check for results in the outputs folder\n",
-    "- Low side: submit job to the correct runner (according to the dataset location: `private/job_runners/<dataset_location>/jobs`)\n",
-    "- watch for results in the corresponding outputs dir\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": []
