--- a/packages/syft-runtimes/notebooks/python/python.ipynb
+++ b/packages/syft-runtimes/notebooks/python/python.ipynb
@@ -126,7 +126,6 @@
     "        readme_path=README_PATH,\n",
     "        private_path=DATASET_PRIVATE_PATH,\n",
     "        mock_path=DATASET_MOCK_PATH,\n",
-    "        # auto_approval = [\"ds@openmined.org\"]\n",
     "    )\n",
     "    dataset.describe()\n",
     "except Exception as e:\n",
@@ -134,16 +133,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "## DO2 Upload dataset"
@@ -152,67 +143,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_stack_2 = setup_rds_server(email=\"do2@openmined.org\", key=\"rds_stack\", root_dir=\".\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_client_2 = do_stack_2.init_session(host=\"do2@openmined.org\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "do_stack_2 = setup_rds_server(email=\"do2@openmined.org\", key=\"rds_stack\", root_dir=\".\")\n",
+    "\n",
+    "do_client_2 = do_stack_2.init_session(host=\"do2@openmined.org\")\n",
+    "\n",
     "DATASET_FILE_NAME = \"crop_stock_data.csv\"\n",
     "DATASET_PATH = \"datasets/part_1\"\n",
     "DATASET_PRIVATE_PATH = f\"{DATASET_PATH}/private\"\n",
-    "DATASET_MOCK_PATH = f\"{DATASET_PATH}/mock\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "DATASET_MOCK_PATH = f\"{DATASET_PATH}/mock\"\n",
+    "\n",
     "# Private Data\n",
     "generate_crop_data(\n",
     "    num_rows=10, output_path=f\"{DATASET_PRIVATE_PATH}/{DATASET_FILE_NAME}\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "# Mock Data\n",
-    "generate_crop_data(num_rows=10, output_path=f\"{DATASET_MOCK_PATH}/{DATASET_FILE_NAME}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "generate_crop_data(num_rows=10, output_path=f\"{DATASET_MOCK_PATH}/{DATASET_FILE_NAME}\")\n",
+    "\n",
     "try:\n",
     "    dataset = do_client_2.dataset.create(\n",
     "        name=\"Organic Crop Stock Data\",\n",
@@ -229,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "13",
    "metadata": {},
    "source": [
     "## DS submits jobs"
@@ -238,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +286,6 @@
     "    f.write(f\"Total Tomatoes: {total_tomatoes}\\n\")\n",
     "\"\"\"\n",
     "\n",
-    "\n",
     "# Write the script to the entrypoint file\n",
     "entrypoint_path = Path(CODE_DIR) / \"entrypoint.py\"\n",
     "with open(entrypoint_path, \"w\") as f:\n",
@@ -345,30 +295,90 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
+   "cell_type": "markdown",
+   "id": "20",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "datasites = [do_client_1, do_client_2]\n",
+    "## New runtimes interface (folder-based)\n",
     "\n",
-    "for client in datasites:\n",
-    "    job = client.job.submit(\n",
-    "        name=\"Crop Avg Experiment\",\n",
-    "        description=\"Farming Coop Avg Experiment\",\n",
-    "        user_code_path=\"./code\",\n",
-    "        dataset_name=DATASET_NAME,\n",
-    "        tags=[\"enclave\", \"syft\"],\n",
-    "        entrypoint=\"entrypoint.py\",\n",
-    "    )\n",
-    "    print(job)"
+    "Let's interact with it from the DOs point of view for now, since the runtimes stay in the `private` folder (`SyftBox/private/<email>/syft_runtimes`)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft_runtimes import PythonRuntime, JobConfig, DEFAULT_RUNTIME\n",
+    "\n",
+    "python_runtime = PythonRuntime(\n",
+    "    syftbox_client=do_stack_1.client, runtime_name=DEFAULT_RUNTIME\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python_runtime.init_runtime_dir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job_config = JobConfig(\n",
+    "    code_path=\"./code\",\n",
+    "    entrypoint=\"entrypoint.py\",\n",
+    ")\n",
+    "\n",
+    "job_config.model_dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": []
