--- a/packages/syft-runtimes/notebooks/high-low/high_low_local_stack_2.ipynb
+++ b/packages/syft-runtimes/notebooks/high-low/high_low_local_stack_2.ipynb
@@ -1,15 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import syft_runtimes.high_low as syhl\n",
-    "from syft_runtimes.high_low.rsync import RsyncConfig\n",
-    "from syft_rds.orchestra import setup_rds_server, remove_rds_stack_dir"
+    "## Setup the local stack (for local testing)"
    ]
   },
   {
@@ -19,13 +15,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_rds_stack_dir(key=\"low_datasites\", root_dir=\"./\")"
+    "import syft_runtimes.high_low as syhl\n",
+    "from syft_rds.orchestra import setup_rds_server, remove_rds_stack_dir"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_rds_stack_dir(key=\"low_datasites\", root_dir=\"./\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,24 +43,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
     "lowside_client = do_stack_1.client\n",
     "lowside_syftbox_dir = do_stack_1.client.workspace.data_dir\n",
-    "highside_data_dir = lowside_syftbox_dir.parent / \"high_datasites\"\n",
+    "highside_syftbox_dir = lowside_syftbox_dir.parent / \"high_datasites\"\n",
     "lowside_email = DO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -rf {highside_data_dir}"
    ]
   },
   {
@@ -63,29 +60,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lowside_client.email"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6",
-   "metadata": {},
-   "source": [
-    "## Initializing the high datasite and connect to it"
+    "!rm -rf {highside_syftbox_dir}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Low side settings\n",
-    "print(f\"{lowside_syftbox_dir = }\")\n",
-    "print(f\"{highside_data_dir = }\")\n",
-    "\n",
-    "ssh_config = {}"
+    "lowside_client.email"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "## DO (High): Initializing the high datasite"
    ]
   },
   {
@@ -95,9 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# High side settings\n",
-    "highside_identifier = \"highside-1234\"\n",
-    "highside_identifier"
+    "# Low side settings\n",
+    "print(f\"{lowside_syftbox_dir = }\")\n",
+    "print(f\"{highside_syftbox_dir = }\")"
    ]
   },
   {
@@ -107,28 +100,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, initialize the high datasite - runs on the low side\n",
-    "syhl.initialize_high_datasite(\n",
-    "    lowside_syftbox_client=lowside_client,\n",
-    "    highside_identifier=highside_identifier,\n",
-    "    highside_data_dir=highside_data_dir,\n",
-    "    force_overwrite=True,\n",
-    ")\n",
-    "\n",
-    "# TODO: change to (this happens on the high side) -> create the folder structure, the default sync config\n",
-    "# syhl.initialize_high_datasite(\n",
-    "#     email=\"your_email\",\n",
-    "#     highside_identifier=highside_identifier,\n",
-    "#     force_overwrite=True,\n",
-    "# )"
+    "# High side settings\n",
+    "highlow_identifier = \"highlow-1234\"\n",
+    "highlow_identifier"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Note: `syft_core`'s `Client` is a python handle to work with the `SyftBox` file system. We have the `SyftBox` file system on the high side, but we never install the `syftbox` Go Client (`curl -fsSL https://syftbox.net/install.sh | sh`)"
+    "# First, initialize the high datasite - runs on the low side\n",
+    "highside_client: syhl.HighSideClient = syhl.initialize_high_datasite(\n",
+    "    email=DO,\n",
+    "    highlow_identifier=highlow_identifier,\n",
+    "    data_dir=highside_syftbox_dir,\n",
+    "    force_overwrite=True,\n",
+    ")"
    ]
   },
   {
@@ -138,61 +128,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highside_email = lowside_client.email\n",
-    "highside_client = syhl.high_side_connect(\n",
-    "    email=highside_email, data_dir=highside_data_dir\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "highside_client.workspace.data_dir"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "## DO (high): Create a high-side dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13",
-   "metadata": {},
-   "source": [
-    "# Create a high-side dataset\n",
-    "\n",
-    "Runs on the high side"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import syft_datasets as syd\n",
-    "from syft_core.config import CONFIG_PATH_ENV\n",
-    "import os\n",
-    "\n",
-    "# Set the high client as default syftbox client\n",
-    "os.environ[CONFIG_PATH_ENV] = str(highside_client.config_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ[CONFIG_PATH_ENV]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,10 +191,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from syft_core.config import CONFIG_PATH_ENV\n",
+    "import os\n",
+    "\n",
+    "# Set the high client as default syftbox client\n",
+    "os.environ[CONFIG_PATH_ENV] = str(highside_client.config_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import syft_datasets as syd\n",
+    "\n",
     "DATASET_NAME = \"my_cool_dataset\"\n",
     "\n",
     "highside_dataset = syd.create(\n",
@@ -254,14 +220,14 @@
     "    readme_path=readme_path,\n",
     "    summary=\"This is a mock dataset for demonstration purposes.\",\n",
     "    tags=[\"example\", \"testing\", \"highside\"],\n",
-    "    location=highside_identifier,\n",
+    "    location=highlow_identifier,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,15 +245,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "## DO (High): Connect to low-side"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from syft_rds import init_session\n",
-    "\n",
-    "high_rds_client = init_session(host=highside_client.email)"
+    "lowside_client = highside_client.lowside_connect(\n",
+    "    highlow_identifier=highlow_identifier,\n",
+    "    lowside_data_dir=lowside_syftbox_dir,  # will be ssh_config in production\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21",
+   "metadata": {},
+   "source": [
+    "## DO (High): Rsync the dataset (mock part only) to the low side"
    ]
   },
   {
@@ -297,8 +280,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{high_rds_client.is_admin = }\")\n",
-    "high_rds_client.dataset.get_all()"
+    "# Sync the dataset (mock part) to the low side\n",
+    "highside_client.sync_dataset(\n",
+    "    dataset_name=DATASET_NAME,\n",
+    "    verbose=True,\n",
+    ")"
    ]
   },
   {
@@ -306,7 +292,7 @@
    "id": "23",
    "metadata": {},
    "source": [
-    "Sync the mock part of the dataset to the low side, also add the dataset names into the runtime's `config.yaml` file"
+    "## DO (Low): Checks if the dataset exists (only the mock part)"
    ]
   },
   {
@@ -316,17 +302,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sync_config: RsyncConfig = syhl.create_default_sync_config(  # TODO: make this run in the backend when the high side is intitialized\n",
-    "    highside_client=highside_client,\n",
-    "    lowside_client=lowside_client,\n",
-    "    highside_identifier=highside_identifier,\n",
-    "    force_overwrite=True,\n",
-    "    **ssh_config,\n",
-    ")\n",
+    "# We can now see the dataset on the low side!\n",
+    "from syft_datasets import SyftDatasetManager\n",
     "\n",
-    "sync_config.model_dump()\n",
+    "lowside_dataset_manager = SyftDatasetManager(syftbox_client=lowside_client)\n",
+    "lowside_datasets = lowside_dataset_manager.get_all()\n",
     "\n",
-    "syhl.sync(syftbox_client=highside_client, rsync_config=sync_config)"
+    "lowside_datasets"
    ]
   },
   {
@@ -336,32 +318,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "syhl.sync_dataset(\n",
-    "    dataset_name=DATASET_NAME,\n",
-    "    highside_client=highside_client,  # TODO: we can remove this\n",
-    "    lowside_client=lowside_client,  # TODO: we can remove this\n",
-    "    verbose=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26",
-   "metadata": {},
-   "source": [
-    "## Sync jobs and done folder\n",
-    "\n",
-    "Sync `jobs` and `done` folder (Runs on the high side)"
+    "lowside_datasets[0].mock_dir"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "syhl.sync_jobs(syftbox_client=highside_client)"
+    "lowside_datasets[0].private_dir  # should raise an error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27",
+   "metadata": {},
+   "source": [
+    "## DS: sees that the mock dataset is uploaded to the SyftBox network, play with it and submits a job to the DO's low datasite"
    ]
   },
   {
@@ -371,7 +346,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "syhl.sync_results(syftbox_client=highside_client)"
+    "from syft_rds import init_session\n",
+    "\n",
+    "ds_client = init_session(host=DO)\n",
+    "\n",
+    "ds_client.job.submit(...)"
    ]
   },
   {
@@ -379,8 +358,7 @@
    "id": "29",
    "metadata": {},
    "source": [
-    "# Switch to low-side\n",
-    "We want to check if the low-side has the synced dataset (only the mock part)"
+    "## DO (High): Review and rsync pending jobs from the low side client"
    ]
   },
   {
@@ -390,19 +368,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_stack_1.client.config_path"
+    "highside_client.sync_pending_jobs()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "31",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from syft_core import Client as SyftBoxClient\n",
-    "\n",
-    "lowside_syftbox_client = SyftBoxClient.load(filepath=do_stack_1.client.config_path)"
+    "## DO (High): Runs the job on private data\n"
    ]
   },
   {
@@ -412,23 +386,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can now see the dataset on the low side!\n",
-    "from syft_datasets import SyftDatasetManager\n",
+    "# High side client runs the jobs using syft_runtimes\n",
+    "import syft_runtimes as syru\n",
     "\n",
-    "lowside_dataset_manager = SyftDatasetManager(syftbox_client=lowside_syftbox_client)\n",
-    "lowside_dataset_manager.get_all()"
+    "pending_jobs = syru.get_pending_jobs(client=highside_client)\n",
+    "for job in pending_jobs:\n",
+    "    highside_client.run_private(job)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "33",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dataset = lowside_dataset_manager.get(name=DATASET_NAME)\n",
-    "\n",
-    "dataset.describe()"
+    "## DO (High): Review and rsync job results in the `done` folder to the lowside client"
    ]
   },
   {
@@ -438,75 +409,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.mock_dir"
+    "highside_client.sync_done_jobs()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "35",
-   "metadata": {},
-   "source": [
-    "**Sanity check**: the private data is not available on the low side (should raise FileNotFoundError)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO improve error reporting for this case\n",
-    "dataset.private_dir"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37",
-   "metadata": {},
-   "source": [
-    "Sync again (let's say after a job is done / new jobs arrive)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "syhl.sync(syftbox_client=highside_client)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "39",
-   "metadata": {},
-   "source": [
-    "## Next Steps\n",
-    "\n",
-    "### High side Job Runner\n",
-    "- Manually sync pending jobs and results (just in a notebook for now)\n",
-    "- Run a daemon process on the high-side that's watching the folder `private/syft_runtimes/highside-1234/jobs` for new jobs that's coming on the low-side"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40",
-   "metadata": {},
-   "source": [
-    "### Low side submits jobs to the correct runner on the high side. Check for results in the outputs folder\n",
-    "- Low side: submit job to the correct runner (according to the dataset location: `private/<email>/syft_runtimes/<high_low_runtime_name>/jobs`)\n",
-    "- Watch for results in the corresponding `done` dir\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
